# deadsync

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  deadsync.ini
assets/fonts/: miso_msdf.json  notosans_cjk_msdf.json  wendy.ini  wendy.json  wendy_msdf.json
assets/fonts/miso/: _miso light.ini  font.ini
assets/fonts/wendy/: _wendy small.ini
assets/noteskins/bar/: dance-single.txt
assets/noteskins/cel/: dance-single.txt
resources/: judgements.md  judgment_graphics.md  noteskins.md  scrollspeed.md
shaders/: frag.spv  msdf.frag  msdf.vert  msdf_frag.spv  msdf_vert.spv  shader.frag  shader.vert  vert.spv
src/: api.rs  app.rs  assets.rs  audio.rs  config.rs  font.rs  game.rs  input.rs  main.rs  math.rs  renderer.rs  screen.rs  state.rs  texture.rs  vulkan_base.rs
src/core/: assets.rs  audio.rs  font.rs  gamepad.rs  input.rs  mod.rs  network.rs  noteskin.rs  opengl.rs  song_loading.rs  space.rs  timing.rs  vulkan.rs
src/core/gfx/: mod.rs  types.rs
src/core/gfx/backends/: mod.rs  opengl.rs  vulkan.rs
src/core/gfx/shaders/: opengl_shader.frag  opengl_shader.vert  vulkan_msdf.frag  vulkan_msdf.vert  vulkan_shader.frag  vulkan_shader.vert  vulkan_sprite.frag  vulkan_sprite.vert  vulkan_texture.frag  vulkan_texture.vert
src/core/input/: mod.rs
src/core/parsing/: mod.rs  simfile.rs
src/core/space/: sm.rs
src/game/: chart.rs  gameplay.rs  judgment.rs  life.rs  mod.rs  note.rs  profile.rs  scores.rs  scroll.rs  song.rs  timing.rs
src/game/parsing/: notes.rs  noteskin.rs  simfile.rs
src/gameplay/: chart.rs  mod.rs  profile.rs  scores.rs  song.rs  timing.rs
src/gameplay/parsing/: mod.rs  notes.rs  noteskin.rs  simfile.rs
src/graphics/: font.rs  mod.rs  renderer.rs  texture.rs  vulkan_base.rs
src/parsing/: bpm.rs  graph.rs  mod.rs  parse.rs  simfile.rs  stats.rs
src/screens/: evaluation.rs  gameplay.rs  init.rs  menu.rs  mod.rs  options.rs  player_options.rs  sandbox.rs  score.rs  select_color.rs  select_music.rs
src/shaders/: opengl_shader.frag  opengl_shader.vert  vulkan_shader.frag  vulkan_shader.vert  vulkan_solid.frag  vulkan_solid.vert  vulkan_texture.vert
src/ui/: actors.rs  anim.rs  build.rs  color.rs  compose.rs  dsl.rs  font.rs  layout.rs  mod.rs  msdf.rs  primitives.rs  runtime.rs
src/ui/components/: fade.rs  gamepad_overlay.rs  heart_bg.rs  logo.rs  menu_list.rs  mod.rs  music_wheel.rs  pad_display.rs  screen_bar.rs  stats_overlay.rs  top_bar.rs
src/utils/: fps.rs  layout.rs  math.rs  mod.rs
