[package]
name = "new_engine"
version = "0.0.15"
edition = "2024"

[dependencies]
winit = "0.30.12"
log = "0.4.27"
env_logger = "0.11.8"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Vulkan Dependencies
ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
cgmath = "0.18"

# OpenGL Dependencies
glow = "0.16.0"
glutin = "0.32.3"
raw-window-handle = "0.6.2"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.2"
shaderc = "0.9.1"

[profile.release]
debug-assertions = true
