[package]
name = "new_engine"
version = "0.0.15"
edition = "2024"

[dependencies]
winit = "0.30.12"
log = "0.4.28"
env_logger = "0.11.8"
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
once_cell = "1.21.3"
configparser = "3.1.0"

# Vulkan Dependencies
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
cgmath = "0.18.0"

# OpenGL Dependencies
glow = "0.16.0"
glutin = "0.32.3"
raw-window-handle = "0.6.2"

# Audio
cpal = "0.16.0"
lewton = "0.10.2"

# Fonts
regex = "1.11.3"

rssp = { path = "src/extern/rssp" }

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.3"
shaderc = "0.10.1"

[profile.release]
debug-assertions = true
