[package]
name = "deadsync"
version = "0.1.137"
authors = ["Patrik Nilsson <perfecttaste@pm.me>"]
edition = "2024"
description = "Rust-based ITG engine with switchable Vulkan/OpenGL backends, designed for accurate sync and competitive performance."
license = "GPL-3.0"
repository = "https://github.com/pnn64/deadsync"
keywords = ["deadsync", "stepmania", "itg", "inthegroove", "rhythmgame", "vulkan"]

[dependencies]
winit = "0.30.12"
log = "0.4.28"
env_logger = "0.11.8"
image = "0.25.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
once_cell = "1.21.3"
configparser = "3.1.0"
chrono = "0.4.42"

# Vulkan Dependencies
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
cgmath = "0.18.0"

# OpenGL Dependencies
glow = "0.16.0"
glutin = "0.32.3"
raw-window-handle = "0.6.2"

# Audio
cpal = "0.16.0"
lewton = "0.10.2"

# Fonts
regex = "1.12.2"

# Networking
ureq = { version = "3.1.2", features = ["json", "rustls"] }

# Song cache
bincode = "2.0.1"
twox-hash = "2.1.2"

# rssp submodule
rssp = { path = "src/extern/rssp" }

# Joystick / Input
[target.'cfg(windows)'.dependencies]
gilrs = { version = "0.11.0", default-features = false, features = ["xinput"] }

[target.'cfg(unix)'.dependencies]
gilrs = "0.11.0"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.3"
shaderc = "0.10.1"

[profile.release]
debug-assertions = true
